[package]
name = "send-to-webhook"
version = "1.0.0"
authors = ["Inversion"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
iced = { version = "0.3", features = ["tokio"] }